Fix wrap cards

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ a {
     display: flex;
     flex-direction: row;
     width: 100%;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
